@@ -1,3 +1,15 @@
+2002-08-06  Per Bothner  <per@bothner.com>
+
+	* Compilation (usedClass):  New method.
+	(callInitMethods):  New method.
+	(generateConstructor):  Use callInitMethods to generate $finit$ calls.
+
+	* ClassExp.java (usedSuperClasses):  New private helper method.
+	(compile):  Call usedSuperClasses.
+	* Compilation (loader):  New field.
+	* Moduleexp.java (evalToClass):  Allocate ClassLoader early.
+	Re-arrange loops to classes to class-loader using addClass.
+
 2002-08-04  Per Bothner  <per@bothner.com>
 
 	* Interpreter.java (loadClass):  Slightly better exception message.
